@@ -25,18 +25,17 @@
 		"tools/ow.lua",
 		"base/validate.lua",
 		"base/help.lua",
-		"actions/codeblocks/_codeblocks.lua",
 		"actions/codeblocks/codeblocks_workspace.lua",
 		"actions/codeblocks/codeblocks_cbp.lua",
-		"actions/codelite/_codelite.lua",
+		"actions/codeblocks/_codeblocks.lua",
 		"actions/codelite/codelite_workspace.lua",
 		"actions/codelite/codelite_project.lua",
-		"actions/make/_make.lua",
+		"actions/codelite/_codelite.lua",
 		"actions/make/make_solution.lua",
 		"actions/make/make_cpp.lua",
 		"actions/make/make_csharp.lua",
+		"actions/make/_make.lua",
 		"actions/xcode/_xcode.lua",
-		"actions/vstudio/_vstudio.lua",
 		"actions/vstudio/vs2002_solution.lua",
 		"actions/vstudio/vs2002_csproj.lua",
 		"actions/vstudio/vs2002_csproj_user.lua",
@@ -45,5 +44,6 @@
 		"actions/vstudio/vs2005_solution.lua",
 		"actions/vstudio/vs2005_csproj.lua",
 		"actions/vstudio/vs2005_csproj_user.lua",
+		"actions/vstudio/_vstudio.lua",
 		"actions/clean/_clean.lua",
 	}
